global: restart service thread on global_init_daemonize

the CephContextServiceThread (and AdminSocket thread) are both spawned
before global_init_daemonize() calls daemon() to fork the process

this means that the resources allocated for those threads will never be
cleaned up in the child. this includes a pthread_cond_t in
CephContextServiceThread, leading to undefined behavior in
pthread_cond_destroy() on shutdown that is detected by helgrind:

==18362== Thread #1: pthread_cond_destroy: destruction of condition variable being waited upon
==18362==    at 0x98FC915: pthread_cond_destroy_WRK (hg_intercepts.c:1586)
==18362==    by 0x98FFB93: pthread_cond_destroy@* (hg_intercepts.c:1604)
==18362==    by 0x66DC23: Cond::~Cond() (Cond.h:45)
==18362==    by 0x66E22D: CephContextServiceThread::~CephContextServiceThread() (ceph_context.cc:90)
==18362==    by 0x66E279: CephContextServiceThread::~CephContextServiceThread() (ceph_context.cc:90)
==18362==    by 0x66CF5D: CephContext::join_service_thread() (ceph_context.cc:652)
==18362==    by 0x66C1A1: CephContext::~CephContext() (ceph_context.cc:522)
==18362==    by 0x66CC59: CephContext::put() (ceph_context.cc:594)
==18362==    by 0x64ACC6: main (test_main.cc:25)

the end result is that we hang in pthread_cond_destroy() on shutdown,
and valgrind complains about memory leaks for everything else in
the CephContext

Fixes: http://tracker.ceph.com/issues/17108

Signed-off-by: Casey Bodley <cbodley@redhat.com>